# sigil-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  Documentación Proyecto Final Compiladores.docx  NOTES.md  README.md  build_manual.bat  compilador_parser.txt  iniciar_web.bat  programa.sg  sigil.bat
docs/: DOCUMENTACION.txt
examples/: 01_basico.sg  02_control.sg  03_funciones.sg  04_errores.sg  05_completo.sg  06_arrays.sg
server/: server.py
src/: ast.hpp  config.hpp  interpreter.cpp  interpreter.hpp  json.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  symbol.hpp  tac.cpp  tac.hpp  token.hpp
web/: app.js  index.html  style.css
